--- a/index.html
+++ b/index.html
@@ -1,7 +1,25 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+	<link href = "style.css" rel = "stylesheet" type = "text/css">
+	<script href = "konami.js" type = "text/javascript"> </script>
+	<script> 
+		var konamicode = [38,38,40,40,37,39,37,39,66,65];
+	</script>
+</head>
+
 <body>
-<h1>Welcome!</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+	<div id = "friend">
+		<h2>Speak, friend, and enter.</h2>
+	</div>
+
+	<div id = "konami">
+
+	</div>
+
 </body>
+
+
 </html>
