--- a/index.html
+++ b/index.html
@@ -6,6 +6,34 @@
 	<script href = "konami.js" type = "text/javascript"> </script>
 	<script> 
 		var konamicode = [38,38,40,40,37,39,37,39,66,65];
+		var userArray = [];
+		var userString = "";
+		var konamiString = "38 38 40 40 37 39 37 39 66 65 "
+
+		//when page init
+		
+		/*document.onkeydown = function (e) {
+			setTimeout(function(){ userArray = []; userString = ""; }, 10000);
+
+		  	var keyPress;
+
+		  	if (typeof event !== 'undefined') {
+		    	keyPress = event.keyCode;
+		  	}
+		  	else if (e) {
+		    	keyPress = e.which;
+		  	}
+
+		  	userArray.push(keyPress);
+
+		  	return false;   // Prevents the default action
+		};
+
+
+		function testFunc() {
+			alert("test success!");
+		}*/
+
 	</script>
 </head>
 
