--- a/index.html
+++ b/index.html
@@ -1,53 +1,54 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Aerial by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
+	<head>
+		<title>Dianne Lee</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
+		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+		<script src="js/skel.min.js"></script>
+		<script src="js/init.js"></script>
+		<noscript>
+			<link rel="stylesheet" href="css/skel.css" />
+			<link rel="stylesheet" href="css/style.css" />
+			<link rel="stylesheet" href="css/style-wide.css" />
+			<link rel="stylesheet" href="css/style-noscript.css" />
+		</noscript>
+		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+	</head>
+	<body class="loading">
+		<div id="wrapper">
+			<div id="bg"></div>
+			<div id="overlay"></div>
+			<div id="main">
 
-<head>
-	<link href = "style.css" rel = "stylesheet" type = "text/css">
-	<script href = "konami.js" type = "text/javascript"> </script>
-	<script> 
-		var konamicode = [38,38,40,40,37,39,37,39,66,65];
-		var userArray = [];
-		var userString = "";
-		var konamiString = "38 38 40 40 37 39 37 39 66 65 "
+				<!-- Header -->
+					<header id="header">
+						<h1>Dianne Lee</h1>
+						<p>Student &nbsp;&bull;&nbsp; Journalist &nbsp;&bull;&nbsp; Coder</p>
+						<nav>
+							<ul>
+								<li><a href="https://twitter.com/thedianngle" target = "_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.facebook.com/dianne.lee.75470" target = "_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.linkedin.com/in/diannedayeonlee" target = "_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/leedia" target = "_blank" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="mailto:diannedayeonlee@gmail.com" target = "_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							</ul>
+						</nav>
+					</header>
 
-		//when page init
-		
-		/*document.onkeydown = function (e) {
-			setTimeout(function(){ userArray = []; userString = ""; }, 10000);
-
-		  	var keyPress;
-
-		  	if (typeof event !== 'undefined') {
-		    	keyPress = event.keyCode;
-		  	}
-		  	else if (e) {
-		    	keyPress = e.which;
-		  	}
-
-		  	userArray.push(keyPress);
-
-		  	return false;   // Prevents the default action
-		};
-
-
-		function testFunc() {
-			alert("test success!");
-		}*/
-
-	</script>
-</head>
-
-<body>
-
-	<div id = "friend">
-		<h2>Speak, friend, and enter.</h2>
-	</div>
-
-	<div id = "konami">
-
-	</div>
-
-</body>
-
-
+				<!-- Footer -->
+					<footer id="footer">
+						<span class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>.</span>
+					</footer>
+				
+			</div>
+		</div>
+	</body>
 </html>
