--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<!-- Optional theme -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 
+		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Mouse+Memoirs">
+
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
@@ -23,6 +25,7 @@
 				-moz-background-size: cover;
 				-o-background-size: cover;
 				background-size: cover;
+
 			}
 			.marketing .col-lg-4 {
 			  margin-bottom: 20px;
@@ -36,13 +39,21 @@
 			  margin-right: 30px;
 			  margin-left: 30px;
 			}
+			.marketing h2 {
+				font-size: 35px;
+				font-family: 'Mouse Memoirs', helvetica;
+			}
+			.marketing p {
+				font-size: 15px;
+			}
 			.header {
 				text-align: center;
 				margin-bottom: 50px;
 				margin-top: 100px;	
 			}
 			.header h1 {
-				font-size: 60px;
+				font-size: 90px;
+				font-family: 'Mouse Memoirs', helvetica;
 			}
 			.footer {
 				text-align: right;
@@ -68,19 +79,19 @@
 			        <div class="col-lg-4">
 			          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
 			          <h2>Student</h2>
-			          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+			          <p>Senior at Needham High School. Leads several school clubs and is a varsity soccer player.</p>
 			          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
 			        </div><!-- /.col-lg-4 -->
 			        <div class="col-lg-4">
 			          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
 			          <h2>Journalist</h2>
-			          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+			          <p>Editor of <i>The Hilltopper</i>, Needham's student-run news publication. Also writes for <i>Hometown Weekly</i>, a local paper that covers six MA towns.</p>
 			          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
 			        </div><!-- /.col-lg-4 -->
 			        <div class="col-lg-4">
 			          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
 			          <h2>Coder</h2>
-			          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+			          <p>Worked on several individual computer science projects and has experience interning for several tech organizations.</p>
 			          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
 			        </div><!-- /.col-lg-4 -->
 			      </div><!-- /.row -->
@@ -96,6 +107,17 @@
 						<a href="mailto:diannedayeonlee@gmail.com" target = "_blank" class="icon fa-envelope-o"><span class="label">Email</span></a>
 					</div>
 				</div>
+
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-73719982-1', 'auto');
+		  ga('send', 'pageview');
+
+		</script>
 
 	</body>
 </html>
