--- a/index.html
+++ b/index.html
@@ -15,98 +15,62 @@
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
-		<style>
-			body{
-				background-color: transparent;
-			}
-			html { 
-				background: url('images/bg.jpg') no-repeat center center fixed; 
-				-webkit-background-size: cover;
-				-moz-background-size: cover;
-				-o-background-size: cover;
-				background-size: cover;
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
-			}
-			.marketing .col-lg-4 {
-			  margin-bottom: 20px;
-			  text-align: center;
-			}
-			.marketing {
-			  font-weight: normal;
-			  color: white;
-			}
-			.marketing .col-lg-4 p {
-			  margin-right: 30px;
-			  margin-left: 30px;
-			}
-			.marketing h2 {
-				font-size: 35px;
-				font-family: 'Mouse Memoirs', helvetica;
-			}
-			.marketing p {
-				font-size: 15px;
-			}
-			.header {
-				text-align: center;
-				margin-bottom: 50px;
-				margin-top: 100px;	
-			}
-			.header h1 {
-				font-size: 90px;
-				font-family: 'Mouse Memoirs', helvetica;
-			}
-			.footer {
-				text-align: right;
-				margin-top: 5px;
-			}
-			.footer a {
-				font-size: 20px;
-			}
+		<link rel="stylesheet" type="text/css" href="style.css">
 
-		</style>
 	</head>
+
 	<body>
-			<div class="header">
-				<div class = "row">
-					<h1>Dianne Lee</h1>
-					<!--<p>Student &nbsp;&bull;&nbsp; Journalist &nbsp;&bull;&nbsp; Coder</p>-->
-				</div>
+		<div class="header">
+			<div class = "row">
+				<h1>Dianne Lee</h1>
+				<!--<p>Student &nbsp;&bull;&nbsp; Journalist &nbsp;&bull;&nbsp; Coder</p>-->
 			</div>
+		</div>
 
-				<div class="container marketing">
-					<!-- Three columns of text below the carousel -->
-			      <div class="row">
-			        <div class="col-lg-4">
-			          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-			          <h2>Student</h2>
-			          <p>Senior at Needham High School. Leads several school clubs and is a varsity soccer player.</p>
-			          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-			        </div><!-- /.col-lg-4 -->
-			        <div class="col-lg-4">
-			          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-			          <h2>Journalist</h2>
-			          <p>Editor of <i>The Hilltopper</i>, Needham's student-run news publication. Also writes for <i>Hometown Weekly</i>, a local paper that covers six MA towns.</p>
-			          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-			        </div><!-- /.col-lg-4 -->
-			        <div class="col-lg-4">
-			          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-			          <h2>Coder</h2>
-			          <p>Worked on several individual computer science projects and has experience interning for several tech organizations.</p>
-			          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-			        </div><!-- /.col-lg-4 -->
-			      </div><!-- /.row -->
-			  </div>
+		<div class="container descriptions">
+			<!-- Three columns of text below the carousel -->
+	        <div class="row">
+	            <div class="col-lg-4">
+		      	    <img class="img-circle" src="images/student.png" alt="Graduation Cap" width="140" height="140"> <!--data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==-->
+		        	<h2>Student</h2>
+		       	    <p>Senior at Needham High School. Leads several school clubs and is a varsity soccer player.</p>
+		      	    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+	     	    </div><!-- /.col-lg-4 -->
+	        
+		        <div class="col-lg-4">
+		  	        <img class="img-circle" src="images/pencil.png" alt="Pencil" width="140" height="140">
+		   	        <h2>Journalist</h2>
+		    	    <p>Editor of <i>The Hilltopper</i>, Needham's student-run news publication. Also writes for <i>Hometown Weekly</i>, a local paper that covers six MA towns.</p>
+		            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+		        </div><!-- /.col-lg-4 -->
+		        
+		        <div class="col-lg-4">
+		            <img class="img-circle" src="images/code.png" alt="Code" width="140" height="140">
+		            <i class="fa fa-code" width = "140" height = "140"></i>
+		            <h2>Coder</h2>
+		            <p>Worked on several individual computer science projects and has experience interning for several tech organizations.</p>
+		            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+		        </div><!-- /.col-lg-4 -->
 
-				<div class = "container footer">
-					<h3> Contact: </h3>
-					<div class = "row">
-						<a href="https://twitter.com/thedianngle" target = "_blank" class="icon fa-twitter"><span class="label">Twitter</span></a>
-						<a href="https://www.facebook.com/dianne.lee.75470" target = "_blank" class="icon fa-facebook"><span class="label">Facebook</span></a>
-						<a href="https://www.linkedin.com/in/diannedayeonlee" target = "_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a>
-						<a href="https://github.com/leedia" target = "_blank" class="icon fa-github"><span class="label">Github</span></a>
-						<a href="mailto:diannedayeonlee@gmail.com" target = "_blank" class="icon fa-envelope-o"><span class="label">Email</span></a>
-					</div>
-				</div>
+		    </div><!-- /.row -->
+		</div><!--container descriptions-->
+
+		<div class = "container footer">
+			<h3> Contact: </h3>
+			<div class = "row">
+				<ul>
+					<li><a href="https://www.googleplus.com" target = "_blank"><i class="fa fa-google-plus"></i> </a></li>
+					<li><a href="https://www.facebook.com/dianne.lee.75470" target = "_blank"><i class="fa fa-facebook"></i></a></li>
+					<li><a href="https://twitter.com/thedianngle" target = "_blank"><i class="fa fa-twitter"></i></a></li>
+					<li><a href="https://github.com/leedia" target = "_blank"><i class="fa fa-github"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/diannedayeonlee" target = "_blank"><i class="fa fa-linkedin"></i></a></li>
+					<li><a href="mailto:diannedayeonlee@gmail.com" target = "_blank"><i class="fa fa-envelope-o"></i> </a></li>
+				</ul>
+			</div>
+			
+		</div><!--container footer-->
 
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -116,7 +80,6 @@
 
 		  ga('create', 'UA-73719982-1', 'auto');
 		  ga('send', 'pageview');
-
 		</script>
 
 	</body>
