--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	            <div class="col-lg-4">
 		      	    <img class="img-circle" src="images/student.png" alt="Graduation Cap" width="140" height="140"> <!--data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==-->
 		        	<h2>Student</h2>
-		       	    <p>Senior at Needham High School. Leads several school clubs and is a varsity soccer player.</p>
+		       	    <p>Senior at Needham High School. Leads several school clubs and plays on the varsity soccer team.</p>
 		      	    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
 	     	    </div><!-- /.col-lg-4 -->
 	        
