--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<li><a href="https://twitter.com/thedianngle" target = "_blank"><i class="fa fa-twitter"></i></a></li>
 					<li><a href="https://github.com/leedia" target = "_blank"><i class="fa fa-github"></i></a></li>
 					<li><a href="https://www.linkedin.com/in/diannedayeonlee" target = "_blank"><i class="fa fa-linkedin"></i></a></li>
-					<li><a href="mailto:diannedayeonlee@gmail.com" target = "_blank"><i class="fa fa-envelope-o"></i> </a></li>
+					<li><a href="mailto:diannedayeonlee [at] gmail [dot] com" target = "_blank"><i class="fa fa-envelope-o"></i> </a></li>
 				</ul>
 			</div>
 			
