--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		      	    <img class="img-circle" src="images/student.png" alt="Graduation Cap" width="140" height="140"> <!--data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==-->
 		        	<h2>Student</h2>
 		       	    <p>Senior at Needham High School. Leads several school clubs and plays on the varsity soccer team.</p>
-		      	    <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+		      	    <p><a class="btn btn-default" data-toggle="collapse" data-target="#student">View details &raquo;</a></p>
 	     	    </div><!-- /.col-lg-4 -->
 	        
 		        <div class="col-lg-4">
@@ -47,6 +47,14 @@
 
 		    </div><!-- /.row -->
 		</div><!--container descriptions-->
+
+		<div class="container">
+		 	<div id="student" class="collapse">
+			    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+			    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+		    </div>
+		</div>
 
 		<div class = "container footer">
 			<h3> Contact: </h3>
