--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
 				<p>Robotics Team | Project Manager (Botball), Software Manager (FIRST)</p>
 
 		 		<h4>Selected Achievements</h4>
+		 		<p>Needham High School Award for Academic Excellence - presented to a senior at graduation (2016)</p>
+		 		<p>John W. Ferrett Memorial English Prize - presented to a senior who has achieved the greatest proficiency in English and who has contributed to the Needham High School publications (2016)</p>
+		 		<p>Sigma Award - presented to the highest achieving senior in mathematics (2016)</p>
+		 		<p>Needham High School Class Day Speaker (2016)</p>
+		 		<p>U.S. Presidential Scholar (2016)</p>
 			    <p>President&#39s Volunteer Service Award (2016)</p>
 			    <p>National Merit Finalist (2016)</p>
 			    <p>NCWIT National Award Runner-Up & MA State Winner - honors women who are active in computing and tech (2015-2016)</p>
@@ -138,7 +143,7 @@
 					<li><a href="https://twitter.com/thedianngle" target = "_blank"><i class="fa fa-twitter"></i></a></li>
 					<li><a href="https://github.com/leedia" target = "_blank"><i class="fa fa-github"></i></a></li>
 					<li><a href="https://www.linkedin.com/in/diannedayeonlee" target = "_blank"><i class="fa fa-linkedin"></i></a></li>
-					<li><a href="mailto:yourmissingsemicolon [at] gmail [dot] com" target = "_blank"><i class="fa fa-envelope-o"></i> </a></li>
+					<li><a href="mailto:diannelee [at] college [dot] harvard [dot] edu" target = "_blank"><i class="fa fa-envelope-o"></i> </a></li>
 				</ul>
 			</div>
 			
