--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
 		 	<div class = "row">
 		 		<h2>Academics</h2>
 		 		<h4>Education</h4>
-		 		<p>Needham High School | 2013 - 2016 (expected)</p>
-		 		<p>Weighted GPA: 5.0/5.0</p>
+		 		<p>Harvard University | 2016 - 2020 (expected)</p>
+		 		<p>Needham High School | 2013 - 2016</p>
+		 		<p>   Weighted GPA: 5.0/5.0</p>
 
 		 		<h4>Coursework</h4>
 		 		<p>Math: AP Calculus AB (2013 Score: 5), AP Calculus BC (2014 Score: 5), Linear Algebra (2015 Independent Study), Numerical Analysis (2016 Independent Study), AP Statistics (2016)</p>
