--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
 	            <div class="col-lg-4">
 		      	    <img class="img-circle" src="images/student.png" alt="Graduation Cap" width="140" height="140"> <!--data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==-->
 		        	<h2>Student</h2>
-		       	    <p>Senior at Needham High School. Leads several school clubs and plays on the varsity soccer team.</p>
+		       	    <p>Sophomore at Harvard University. A.B. Candidate in Computer Science.</p>
 		      	    <p><a class="btn btn-secondary" data-toggle = "collapse" data-target = "#student" href = "#student">View details &raquo;</a></p>
 	     	    </div><!-- /.col-lg-4 -->
 	        
 		        <div class="col-lg-4">
 		  	        <img class="img-circle" src="images/pencil.png" alt="Pencil" width="140" height="140">
 		   	        <h2>Journalist</h2>
-		    	    <p>Editor of <i>The Hilltopper</i>, Needham's student-run news publication. Also writes for <i>Hometown Weekly</i>, a local paper that covers six MA towns.</p>
+		    	    <p>Beat Reporter & Data Team for <i>The Harvard Crimson</i>.</p>
 		            <p><a class="btn btn-secondary" data-toggle = "collapse" data-target = "#journalist" href = "#journalist">View details &raquo;</a></p>
 		        </div><!-- /.col-lg-4 -->
 		        
 		        <div class="col-lg-4">
 		            <img class="img-circle" src="images/code.png" alt="Code" width="140" height="140">
 		            <h2>Coder</h2>
-		            <p>Worked on several individual computer science projects and has experience interning for several tech organizations.</p>
+		            <p>Technical internship experience, individual software projects.</p>
 		            <p><a class="btn btn-secondary" data-toggle = "collapse" data-target = "#coder" href = "#coder">View details &raquo;</a></p>
 		        </div><!-- /.col-lg-4 -->
 
