updated twitter handle

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 <div class = "row">
                     <ul >
                         <li><a href="https://www.facebook.com/dianne.lee.75470" target = "_blank"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="https://twitter.com/thedianngle" target = "_blank"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="https://twitter.com/diannelee_" target = "_blank"><i class="fa fa-twitter"></i></a></li>
                         <li><a href="https://github.com/leedia" target = "_blank"><i class="fa fa-github"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/diannedayeonlee" target = "_blank"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="mailto:diannelee [at] college [dot] harvard [dot] edu" target = "_blank"><i class="fa fa-envelope-o"></i> </a></li>
